--- a/Odin-Recipes/index.html
+++ b/Odin-Recipes/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="/Odin-Project-Practice/recipes/lasagna.html">Lasagna</a>
+        <a href="/Odin-Project-Practice/Odin-Recipes/recipes/lasagna.html">Lasagna</a>
+        <a href="/Odin-Project-Practice/Odin-Recipes/recipes/carbonara.html">Carbonara</a>
     </body>
 </html>
+
