--- a/Odin-LoginPage/index.html
+++ b/Odin-LoginPage/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Login Page</title>
 </head>
 <body>
-    
+    <!-- <img src="crew-4Hg8LH9Hoxc-unsplash.jpg" style="height:100vh"> -->
 </body>
 </html>
